--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,11 +4,11 @@ android-compileSdk = "35"
 android-minSdk = "24"
 android-targetSdk = "35"
 androidx-activity = "1.10.1"
-androidx-navigation = "2.9.0-beta03"
+androidx-navigation = "2.9.0-beta04"
 androix-window = "1.4.0-alpha09"
-androidx-room = "2.8.0-alpha01"
+androidx-room = "2.8.0-beta01"
 androidx-core = "1.16.0"
-androidx-espresso = "3.6.1"
+androidx-espresso = "3.7.0"
 androidx-lifecycle = "2.9.1"
 androidx-testExt = "1.2.1"
 composeHotReload = "1.0.0-beta04"
@@ -18,7 +18,7 @@ junit = "4.13.2"
 kotlin = "2.2.0"
 kotlinx-coroutines = "1.10.2"
 kotlinx-datetime = "0.6.2"
-ktor = "3.2.2"
+ktor = "3.2.3"
 koin-bom = "4.1.0"
 ksp = "2.2.0-2.0.2"
 sqlite = "2.5.2"
