--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ kotlinx-datetime = "0.6.2"
 ktor = "3.2.3"
 koin-bom = "4.1.0"
 ksp = "2.2.0-2.0.2"
+materialIconsCore = "1.7.3"
 sqlite = "2.5.2"
 
 [libraries]
@@ -56,6 +57,7 @@ koin-core = { module = "io.insert-koin:koin-core"}
 koin-compose = { module = "io.insert-koin:koin-compose"}
 koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel"}
 koin-android = { module = "io.insert-koin:koin-android"}
+material-icons-core = { module = "org.jetbrains.compose.material:material-icons-core", version.ref = "materialIconsCore" }
 sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
 
 [plugins]
