--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,26 +3,27 @@ agp = "8.12.0"
 android-compileSdk = "36"
 android-minSdk = "24"
 android-targetSdk = "36"
-androidx-activity = "1.10.1"
-androidx-navigation = "2.9.0-beta03"
-androix-window = "1.4.0-alpha09"
-androidx-room = "2.8.0-beta01"
-androidx-core = "1.16.0"
+androidx-activity = "1.11.0"
+androidx-navigation = "2.9.0"
+androix-window = "1.4.0"
+androidx-room = "2.8.1"
+androidx-core = "1.17.0"
 androidx-espresso = "3.7.0"
-androidx-lifecycle = "2.9.1"
-androidx-testExt = "1.2.1"
-composeHotReload = "1.0.0-beta04"
-composeMultiplatform = "1.9.0-alpha03"
+androidx-lifecycle = "2.9.4"
+androidx-testExt = "1.3.0"
+composeHotReload = "1.0.0-rc01"
+composeMultiplatform = "1.9.0"
+composeMaterial3MultiplatformFix="1.10.0-alpha01"
 composeMaterial3 = "1.1.2"
 junit = "4.13.2"
 kotlin = "2.2.0"
 kotlinx-coroutines = "1.10.2"
-kotlinx-datetime = "0.6.2"
-ktor = "3.2.3"
-koin-bom = "4.1.0"
+kotlinx-datetime = "0.7.1"
+ktor = "3.3.0"
+koin-bom = "4.1.1"
 ksp = "2.2.0-2.0.2"
 materialIconsCore = "1.7.3"
-sqlite = "2.5.2"
+sqlite = "2.6.1"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -38,6 +39,7 @@ androidx-room-compiler = { group = "androidx.room", name = "room-compiler", vers
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "androidx-room" }
 androidx-navigation = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "androidx-navigation" }
 androidx-window-core = { module = "org.jetbrains.androidx.window:window-core", version.ref = "androix-window" }
+compose-material3-fix = { module = "org.jetbrains.compose.material3:material3", version.ref = "composeMaterial3MultiplatformFix" }
 compose-material3-adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "composeMaterial3" }
 compose-material3-adaptive-layout = { module = "org.jetbrains.compose.material3.adaptive:adaptive-layout", version.ref = "composeMaterial3" }
 compose-material3-adaptive-navigation = { module = "org.jetbrains.compose.material3.adaptive:adaptive-navigation", version.ref = "composeMaterial3" }
